apps/infra/homepage/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: homepage.infra.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:tMNWhmPBpyzMihcHev3KsMkm+GCclkvrylXY6YhxWYh2,iv:9yn2aBdG3SWZVk4rEMEP7Gzew75zM1DyXo5r9Yeo9Ew=,tag:wl8FUh7K1OBvHVFqHswGGQ==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:SDO6a1/RG6CXRtO3u8XLfxcgeFfpM6Sc,iv:q9/0ZZopZ9RzPj9ybVaYiyTou4nki/EFgymnolskZoc=,tag:no+iPaZqvrtSaTlXJcZY4g==,type:str]
        ingress.kubernetes.io/ssl-passthrough: "true"
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: homepage-production
    namespace: homepage
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:3hg1vHHbGxNRkr5r0easKUe82Jehw35pWFiW0GkBBa7si4521xq3/Qc=,iv:SUQNaFHlu1EP0qOl5Bg7MqOX6aWR8lmoLkwogC78UN4=,tag:A2eCu3BNwwA9rb3mnF6iKw==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: homepage
              namespace: homepage
    tls:
        domains:
            - main: ENC[AES256_GCM,data:1b+YVHe+S1h2jwL0MdEt5RPVStlEd1cA,iv:pttpr9HvfsEzOIH4PJnts6/iyE5EV9pyk333XSkTMvw=,tag:Gp62VapDarAsIWLuIJasIg==,type:str]
              sans:
                - ENC[AES256_GCM,data:P8m46Ge6xHHWiFAPfpwFLohja8lt7gaRyA==,iv:Iue88A96qv+LMaKJTbNTN5yGA3JxCpDNTcR0yYBzT2Q=,tag:Bz03Qr348FvORrUOsmWZtA==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: homepage-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSY2N0eXhRT08vT3pxL0pk
[...]
            4kdVVzItPffBClPMQmlMQdYgH9P8x/D7MQv4CuhW5e8eBslWa+mYVg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-08T21:33:25Z"
    mac: ENC[AES256_GCM,data:sP9T88pTfm4kq9MMmVOtaS7HYrjt17JoqeKN6wJ+OWRSOlfJRwpynmPhn2O3reZG13j8HBl70KMHUhUAdiNsYinez27EiyRdf+oZ8npUyGfB7MMfVxD5zt8H4tuEsC2qLpf5H/pPXQ04MSCA8FZmE0Mku80tdrWa5T+rbVhY/Rs=,iv:r8pwq/K+WlDzoH+VAYt4ndHiBg6rhVJzR8YaEr/dfHI=,tag:10pLa/G3faKC6Cu3JzstPQ==,type:str]
    pgp:
        - created_at: "2024-10-08T21:33:25Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//cUhNJYNRc2gyM58NJF+PwpUiH70eRu9erxpkXddlby3h
[...]
            =AaKG
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.0
