apps/infra/homepage/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: homepage.pvc1.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:o5BD30Cgo2tUs1F4GQ/TnQuJ8QvyASdoyjFgA2G8soY=,iv:sVVs/C7CqZXFyQqJXwkSMcUW/le+zMr2PbH8Mi6KHFo=,tag:gHOumUWPWfVcVZOByBDbHA==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:ceNyuefY27QYViwQ+WY3Nn4Tej9VJNQ=,iv:GmAtwcoYRCnbS74fwsKZF7Oc8Y/Omc7Kgxy1bbzfI9M=,tag:xyGJ0hxFMgHuBcdC3UP1bw==,type:str]
        ingress.kubernetes.io/ssl-passthrough: "true"
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: homepage-staging
    namespace: homepage
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:jjWNzd8kHxOtNzSmSaegPjM25m+vwM5gAI24rm8/u014lFAnnD2u8w==,iv:BwWGTlNzhXKBfxOJ6OUUAyFF8cPsNQ+38HYDSoH3wAc=,tag:hHuJ8uXOHdOTUP2wayBNdA==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: homepage
              namespace: homepage
    tls:
        domains:
            - main: ENC[AES256_GCM,data:y+GODPNLRN3h2f1UXWDRR07Pw+0Dg3M=,iv:2KUfSoclb2KwxPYrniwm9rvKLkAodJqhRoAw4ylOgC4=,tag:wVGz0FCOtz1lGeqozUxXNA==,type:str]
              sans:
                - ENC[AES256_GCM,data:SwmGYh/hlrZzex0AD0NumHi3AQKuWzYj,iv:sbe/xlunQYhV8WaCFisQLVY6l9cQrvIz94w222jbEoc=,tag:C5XAl/lvsiYnXKueaqmhog==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: homepage-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwaURrRG9VRDRWNGE3MVh3
[...]
            6rV9DOdTmcrBeOEh3LPwXH++hPo2Scid19hIRjOjCMO5Zph7aMZiPA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-08T23:09:12Z"
    mac: ENC[AES256_GCM,data:JoL7APPnCYF0zwi7Bmy7CXM4z8JSCk/jwVpi1RxfCJd90TxwKZ2vGvhS6Qz4+drYygGnTT51w/EmA+CYbDwgJvR3GuhUDW6RnRra/KVfQ5ShYcfxe8P7SdNsAs35nF5pru9vcrALRFyildVuhVLfTQwl+dHCupnNESpXBenKr0o=,iv:NKupPajPbbSXELfkpsJ7VkbRt2GimlGZ5a7prxatVx8=,tag:6T/Cl3WHX/sdqTRQewGhnQ==,type:str]
    pgp:
        - created_at: "2024-10-08T23:09:12Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/8Doo1vIAzYhg2CNVd2ZvskYKh42vTPTaMBl07JfKjBVdm
[...]
            =bBDu
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.0
